exports[`consistent-class-member-order > invalid(1): class Singleton {\n\tonePublicMethod() {}\n\n\tstatic getInstance() {}\n} 1`] = `

  1 | class Singleton {
  2 | 	onePublicMethod() {}
  3 |
  4 | 	static getInstance() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(1): class Singleton {\n\tonePublicMethod() {}\n\n\tstatic getInstance() {}\n} 2`] = `

Message:
  1 | class Singleton {
  2 | 	onePublicMethod() {}
  3 |
> 4 | 	static getInstance() {}
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Expected static method \`getInstance\` to come before public method \`onePublicMethod\`.
  5 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Singleton {
  2 | 	static getInstance() {}
  3 |
  4 | 	onePublicMethod() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(10): class Foo { field = 1; static staticField = 1; } 1`] = `

  1 | class Foo { field = 1; static staticField = 1; }

`;

exports[`consistent-class-member-order > invalid(10): class Foo { field = 1; static staticField = 1; } 2`] = `

Message:
> 1 | class Foo { field = 1; static staticField = 1; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^ Expected static field \`staticField\` to come before public field \`field\`.

`;

exports[`consistent-class-member-order > invalid(11): class Foo {\n\tfield = 1;\n\t// Keep this comment attached.\n\tstatic staticField = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	field = 1;
  3 | 	// Keep this comment attached.
  4 | 	static staticField = 1;
  5 | }

`;

exports[`consistent-class-member-order > invalid(11): class Foo {\n\tfield = 1;\n\t// Keep this comment attached.\n\tstatic staticField = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	field = 1;
  3 | 	// Keep this comment attached.
> 4 | 	static staticField = 1;
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Expected static field \`staticField\` to come before public field \`field\`.
  5 | }

`;

exports[`consistent-class-member-order > invalid(12): class Foo {\n\tpublicMethod() {}\n\t#privateMethod() {}\n} 1`] = `

  1 | class Foo {
  2 | 	publicMethod() {}
  3 | 	#privateMethod() {}
  4 | }

`;

exports[`consistent-class-member-order > invalid(12): class Foo {\n\tpublicMethod() {}\n\t#privateMethod() {}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	publicMethod() {}
> 3 | 	#privateMethod() {}
    | 	^^^^^^^^^^^^^^^^^^^ Expected private method \`#privateMethod\` to come before public method \`publicMethod\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	#privateMethod() {}
  3 |
  4 | 	publicMethod() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(13): class Foo {\n\tmethod() {}\n\tstatic staticMethod() {}\n} 1`] = `

  1 | class Foo {
  2 | 	method() {}
  3 | 	static staticMethod() {}
  4 | }

`;

exports[`consistent-class-member-order > invalid(13): class Foo {\n\tmethod() {}\n\tstatic staticMethod() {}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	method() {}
> 3 | 	static staticMethod() {}
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Expected static method \`staticMethod\` to come before public method \`method\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	static staticMethod() {}
  3 |
  4 | 	method() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(14): class Foo {\n\tstatic {}\n\tstatic staticField = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	static {}
  3 | 	static staticField = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(14): class Foo {\n\tstatic {}\n\tstatic staticField = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	static {}
> 3 | 	static staticField = 1;
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Expected static field \`staticField\` to come before static block.
  4 | }

`;

exports[`consistent-class-member-order > invalid(15): class Foo {\n\tpublicMethod() {}\n\t#privateMethod() {}\n\tconstructor() {}\n\tpublicField = 1;\n\t#privateField = 1;\n\tstatic {}\n\tstatic staticField = 1;\n\tstatic staticMethod() {}\n} 1`] = `

   1 | class Foo {
   2 | 	publicMethod() {}
   3 | 	#privateMethod() {}
   4 | 	constructor() {}
   5 | 	publicField = 1;
   6 | 	#privateField = 1;
   7 | 	static {}
   8 | 	static staticField = 1;
   9 | 	static staticMethod() {}
  10 | }

`;

exports[`consistent-class-member-order > invalid(15): class Foo {\n\tpublicMethod() {}\n\t#privateMethod() {}\n\tconstructor() {}\n\tpublicField = 1;\n\t#privateField = 1;\n\tstatic {}\n\tstatic staticField = 1;\n\tstatic staticMethod() {}\n} 2`] = `

Message:
   1 | class Foo {
   2 | 	publicMethod() {}
>  3 | 	#privateMethod() {}
     | 	^^^^^^^^^^^^^^^^^^^ Expected private method \`#privateMethod\` to come before public method \`publicMethod\`.
   4 | 	constructor() {}
   5 | 	publicField = 1;
   6 | 	#privateField = 1;
   7 | 	static {}
   8 | 	static staticField = 1;
   9 | 	static staticMethod() {}
  10 | }

`;

exports[`consistent-class-member-order > invalid(16): abstract class Foo {\n\tprotected protectedField: string;\n\tprivate privateField: string;\n\n\tabstract public publicMethod(): void;\n\tprivate privateMethod(): void {}\n} 1`] = `

  1 | abstract class Foo {
  2 | 	protected protectedField: string;
  3 | 	private privateField: string;
  4 |
  5 | 	abstract public publicMethod(): void;
  6 | 	private privateMethod(): void {}
  7 | }

`;

exports[`consistent-class-member-order > invalid(16): abstract class Foo {\n\tprotected protectedField: string;\n\tprivate privateField: string;\n\n\tabstract public publicMethod(): void;\n\tprivate privateMethod(): void {}\n} 2`] = `

Message:
  1 | abstract class Foo {
  2 | 	protected protectedField: string;
> 3 | 	private privateField: string;
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected private field \`privateField\` to come before public field \`protectedField\`.
  4 |
  5 | 	abstract public publicMethod(): void;
  6 | 	private privateMethod(): void {}
  7 | }

Suggestion 1/1: Reorder class members by group.:
  1 | abstract class Foo {
  2 | 	private privateField: string;
  3 |
  4 | 	protected protectedField: string;
  5 |
  6 | 	private privateMethod(): void {}
  7 |
  8 | 	abstract public publicMethod(): void;
  9 | }

`;

exports[`consistent-class-member-order > invalid(17): class Foo {\n\taccessor publicAccessor = 1;\n\tprivate accessor privateAccessor = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	accessor publicAccessor = 1;
  3 | 	private accessor privateAccessor = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(17): class Foo {\n\taccessor publicAccessor = 1;\n\tprivate accessor privateAccessor = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	accessor publicAccessor = 1;
> 3 | 	private accessor privateAccessor = 1;
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected private field \`privateAccessor\` to come before public field \`publicAccessor\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	private accessor privateAccessor = 1;
  3 |
  4 | 	accessor publicAccessor = 1;
  5 | }

`;

exports[`consistent-class-member-order > invalid(18): class Foo {\n\tstatic staticField = 1;\n\tpublicField = 1;\n} 1`] = `

Options:
- order:
    - 'private-field'
    - 'public-field'
    - 'static-field'
    - 'constructor'
    - 'private-method'
    - 'public-method'
    - 'static-method'
    - 'static-block'

Code:
  1 | class Foo {
  2 | 	static staticField = 1;
  3 | 	publicField = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(18): class Foo {\n\tstatic staticField = 1;\n\tpublicField = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	static staticField = 1;
> 3 | 	publicField = 1;
    | 	^^^^^^^^^^^^^^^^ Expected public field \`publicField\` to come before static field \`staticField\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	publicField = 1;
  3 |
  4 | 	static staticField = 1;
  5 | }

`;

exports[`consistent-class-member-order > invalid(19): class Foo {\n\tmethod() {}\n\t[key: string]: unknown;\n\tfirstField = 1;\n\tsecondField = 2;\n} 1`] = `

  1 | class Foo {
  2 | 	method() {}
  3 | 	[key: string]: unknown;
  4 | 	firstField = 1;
  5 | 	secondField = 2;
  6 | }

`;

exports[`consistent-class-member-order > invalid(19): class Foo {\n\tmethod() {}\n\t[key: string]: unknown;\n\tfirstField = 1;\n\tsecondField = 2;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	method() {}
  3 | 	[key: string]: unknown;
> 4 | 	firstField = 1;
    | 	^^^^^^^^^^^^^^^ Expected public field \`firstField\` to come before public method \`method\`.
  5 | 	secondField = 2;
  6 | }

`;

exports[`consistent-class-member-order > invalid(2): class Foo {\n\tpublicMethod() {}\n\tstatic 'create'() {}\n} 1`] = `

  1 | class Foo {
  2 | 	publicMethod() {}
  3 | 	static 'create'() {}
  4 | }

`;

exports[`consistent-class-member-order > invalid(2): class Foo {\n\tpublicMethod() {}\n\tstatic 'create'() {}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	publicMethod() {}
> 3 | 	static 'create'() {}
    | 	^^^^^^^^^^^^^^^^^^^^ Expected static method \`create\` to come before public method \`publicMethod\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	static 'create'() {}
  3 |
  4 | 	publicMethod() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(20): class Foo {\nmethod() {}\nfield = 1;\n} 1`] = `

  1 | class Foo {
  2 | method() {}
  3 | field = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(20): class Foo {\nmethod() {}\nfield = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | method() {}
> 3 | field = 1;
    | ^^^^^^^^^^ Expected public field \`field\` to come before public method \`method\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | field = 1;
  3 |
  4 | method() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(21): class Foo {\n\tmethod() {}\n\tfirstField = 1;\n\tsecondField = 2;\n} 1`] = `

  1 | class Foo {
  2 | 	method() {}
  3 | 	firstField = 1;
  4 | 	secondField = 2;
  5 | }

`;

exports[`consistent-class-member-order > invalid(21): class Foo {\n\tmethod() {}\n\tfirstField = 1;\n\tsecondField = 2;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	method() {}
> 3 | 	firstField = 1;
    | 	^^^^^^^^^^^^^^^ Expected public field \`firstField\` to come before public method \`method\`.
  4 | 	secondField = 2;
  5 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	firstField = 1;
  3 |
  4 | 	secondField = 2;
  5 |
  6 | 	method() {}
  7 | }

`;

exports[`consistent-class-member-order > invalid(3): class Foo {\n\tpublicMethod() {}\n\tstatic 1_000() {}\n} 1`] = `

  1 | class Foo {
  2 | 	publicMethod() {}
  3 | 	static 1_000() {}
  4 | }

`;

exports[`consistent-class-member-order > invalid(3): class Foo {\n\tpublicMethod() {}\n\tstatic 1_000() {}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	publicMethod() {}
> 3 | 	static 1_000() {}
    | 	^^^^^^^^^^^^^^^^^ Expected static method \`1000\` to come before public method \`publicMethod\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	static 1_000() {}
  3 |
  4 | 	publicMethod() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(4): class Foo {\n\tpublicMethod() {}\n\tstatic [getName()]() {}\n} 1`] = `

  1 | class Foo {
  2 | 	publicMethod() {}
  3 | 	static [getName()]() {}
  4 | }

`;

exports[`consistent-class-member-order > invalid(4): class Foo {\n\tpublicMethod() {}\n\tstatic [getName()]() {}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	publicMethod() {}
> 3 | 	static [getName()]() {}
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Expected static method to come before public method \`publicMethod\`.
  4 | }

`;

exports[`consistent-class-member-order > invalid(5): class Foo {\n\tget publicValue() {}\n\tstatic set sharedValue(value) {}\n} 1`] = `

  1 | class Foo {
  2 | 	get publicValue() {}
  3 | 	static set sharedValue(value) {}
  4 | }

`;

exports[`consistent-class-member-order > invalid(5): class Foo {\n\tget publicValue() {}\n\tstatic set sharedValue(value) {}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	get publicValue() {}
> 3 | 	static set sharedValue(value) {}
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected static method \`sharedValue\` to come before public method \`publicValue\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	static set sharedValue(value) {}
  3 |
  4 | 	get publicValue() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(6): class Foo {\n\tconstructor() {}\n\n\tfield = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	constructor() {}
  3 |
  4 | 	field = 1;
  5 | }

`;

exports[`consistent-class-member-order > invalid(6): class Foo {\n\tconstructor() {}\n\n\tfield = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	constructor() {}
  3 |
> 4 | 	field = 1;
    | 	^^^^^^^^^^ Expected public field \`field\` to come before constructor.
  5 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	field = 1;
  3 |
  4 | 	constructor() {}
  5 | }

`;

exports[`consistent-class-member-order > invalid(7): class Foo {\n\tpublicField = 1;\n\t#privateField = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	publicField = 1;
  3 | 	#privateField = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(7): class Foo {\n\tpublicField = 1;\n\t#privateField = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	publicField = 1;
> 3 | 	#privateField = 1;
    | 	^^^^^^^^^^^^^^^^^^ Expected private field \`#privateField\` to come before public field \`publicField\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	#privateField = 1;
  3 |
  4 | 	publicField = 1;
  5 | }

`;

exports[`consistent-class-member-order > invalid(8): class Foo {\n\t['computedField'] = 1;\n\t#privateField = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	['computedField'] = 1;
  3 | 	#privateField = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(8): class Foo {\n\t['computedField'] = 1;\n\t#privateField = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	['computedField'] = 1;
> 3 | 	#privateField = 1;
    | 	^^^^^^^^^^^^^^^^^^ Expected private field \`#privateField\` to come before public field \`computedField\`.
  4 | }

`;

exports[`consistent-class-member-order > invalid(9): class Foo {\n\tfield = 1;\n\tstatic staticField = 1;\n} 1`] = `

  1 | class Foo {
  2 | 	field = 1;
  3 | 	static staticField = 1;
  4 | }

`;

exports[`consistent-class-member-order > invalid(9): class Foo {\n\tfield = 1;\n\tstatic staticField = 1;\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	field = 1;
> 3 | 	static staticField = 1;
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Expected static field \`staticField\` to come before public field \`field\`.
  4 | }

Suggestion 1/1: Reorder class members by group.:
  1 | class Foo {
  2 | 	static staticField = 1;
  3 |
  4 | 	field = 1;
  5 | }

`;
